Add informe notebook with previous work

--- a/hito3/exploracion.ipynb
+++ b/hito3/exploracion.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/isaias/proyecto-mineria-de-datos/venv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import joblib\n",
@@ -35,7 +44,18 @@
     "DATA_DIR = ROOT_DIR / \"data\"\n",
     "assert DATA_DIR.exists()\n",
     "\n",
-    "DATA_PATH = DATA_DIR / \"base_indices_2005-2023.csv\""
+    "DATA_PATH = DATA_DIR / \"base_indices_2005-2023.xlsx\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # xlsx to pkl\n",
+    "# df = pd.read_excel(DATA_PATH)\n",
+    "# joblib.dump(df, DATA_DIR / 'base_indices.pkl')"
    ]
   },
   {
@@ -45,10 +65,22 @@
    "outputs": [],
    "source": [
     "df = joblib.load(DATA_DIR / \"base_indices.pkl\")\n",
-    "df = df.reset_index()\n",
-    "df = df[df[\"Promedio Puntaje (promedio matemáticas y lenguaje)\"].notna()].reset_index(\n",
-    "    drop=True\n",
-    ")\n",
+    "df = df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocesamiento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = (\n",
     "    df[df[\"Pregrado/Posgrado\"] == \"Pregrado\"]\n",
     "    .drop(columns=[\"Pregrado/Posgrado\"])\n",
@@ -58,157 +90,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 39726 entries, 0 to 39725\n",
-      "Data columns (total 59 columns):\n",
-      " #   Column                                              Non-Null Count  Dtype         \n",
-      "---  ------                                              --------------  -----         \n",
-      " 0   Año                                                 39726 non-null  datetime64[ns]\n",
-      " 1   Cód. Institución                                    39726 non-null  int64         \n",
-      " 2   Nombre Institución                                  39726 non-null  object        \n",
-      " 3   Tipo Institución                                    39726 non-null  object        \n",
-      " 4   Clasificación1                                      39726 non-null  object        \n",
-      " 5   Clasificación2                                      39726 non-null  object        \n",
-      " 6   Clasificación3                                      39726 non-null  object        \n",
-      " 7   Clasificación4                                      39726 non-null  object        \n",
-      " 8   Clasificación5                                      39726 non-null  object        \n",
-      " 9   Clasificación6                                      39726 non-null  object        \n",
-      " 10  Nombre de la Sede                                   39726 non-null  object        \n",
-      " 11  Comuna donde se imparte la carrera o programa       39726 non-null  object        \n",
-      " 12  Nombre Region                                       39726 non-null  object        \n",
-      " 13  Orden Geográfico de la Región (Norte aSur)          39726 non-null  int64         \n",
-      " 14  Cód. Carrera                                        39726 non-null  int64         \n",
-      " 15  Carrera Genérica                                    39726 non-null  object        \n",
-      " 16  Nombre Programa                                     39726 non-null  object        \n",
-      " 17  Mención o Especialidad                              4627 non-null   object        \n",
-      " 18  Horario                                             39726 non-null  object        \n",
-      " 19  Tipo Programa                                       39726 non-null  object        \n",
-      " 20  Area Conocimiento                                   39726 non-null  object        \n",
-      " 21  idgenerocarrera                                     39726 non-null  int64         \n",
-      " 22  Tipo Carrera                                        39726 non-null  object        \n",
-      " 23  IngresoDirecto                                      39726 non-null  object        \n",
-      " 24  Año Inicio Actividades                              39726 non-null  int64         \n",
-      " 25  Nombre del Campus                                   24525 non-null  object        \n",
-      " 26  Duración (en semestres)                             39635 non-null  float64       \n",
-      " 27  Cód. Campus                                         24526 non-null  float64       \n",
-      " 28  Cód. Sede                                           39726 non-null  int64         \n",
-      " 29  Título                                              37426 non-null  object        \n",
-      " 30  Grado Académico                                     34407 non-null  object        \n",
-      " 31  Máximo Puntaje (promedio matemáticas y lenguaje)    39723 non-null  float64       \n",
-      " 32  Promedio Puntaje (promedio matemáticas y lenguaje)  39726 non-null  float64       \n",
-      " 33  Mínimo Puntaje (promedio matemáticas y lenguaje)    39274 non-null  float64       \n",
-      " 34  Puntaje de corte (primer seleccionado)              33505 non-null  float64       \n",
-      " 35  Puntaje de corte (promedio de la carrera)           33408 non-null  float64       \n",
-      " 36  Puntaje de corte (último seleccionado)              35485 non-null  float64       \n",
-      " 37  Máximo Puntaje NEM                                  19952 non-null  float64       \n",
-      " 38  Promedio Puntaje NEM                                20139 non-null  float64       \n",
-      " 39  Mínimo Puntaje NEM                                  19939 non-null  float64       \n",
-      " 40  Máximo Puntaje Ranking                              18954 non-null  float64       \n",
-      " 41  Promedio Puntaje Ranking                            19099 non-null  float64       \n",
-      " 42  Mínimo Puntaje Ranking                              18941 non-null  float64       \n",
-      " 43  Nº Alumnos Ingreso Via PSU o PDT                    39337 non-null  float64       \n",
-      " 44  Nº Alumnos Ingreso Otra Via                         18751 non-null  float64       \n",
-      " 45  Valor de matrícula                                  39292 non-null  float64       \n",
-      " 46  Valor de arancel                                    39514 non-null  float64       \n",
-      " 47  Valor del Título                                    34185 non-null  float64       \n",
-      " 48  Tipo Moneda                                         39726 non-null  object        \n",
-      " 49  Vacantes                                            38372 non-null  float64       \n",
-      " 50  Matrícula primer año hombres                        39329 non-null  float64       \n",
-      " 51  Matrícula primer año mujeres                        39553 non-null  float64       \n",
-      " 52  Matrícula primer año extranjeros                    27375 non-null  float64       \n",
-      " 53  Matrícula Primer Año                                39726 non-null  int64         \n",
-      " 54  Matrícula total hombres                             39534 non-null  float64       \n",
-      " 55  Matrícula total mujeres                             39686 non-null  float64       \n",
-      " 56  Matrícula total extranjeros                         29487 non-null  float64       \n",
-      " 57  Matrícula Total                                     39726 non-null  int64         \n",
-      " 58  Códgo SIES                                          37396 non-null  object        \n",
-      "dtypes: datetime64[ns](1), float64(26), int64(8), object(24)\n",
-      "memory usage: 17.9+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Mención o Especialidad                                88.352716\n",
-       "Nº Alumnos Ingreso Otra Via                           52.799174\n",
-       "Mínimo Puntaje Ranking                                52.320898\n",
-       "Máximo Puntaje Ranking                                52.288174\n",
-       "Promedio Puntaje Ranking                              51.923174\n",
-       "Mínimo Puntaje NEM                                    49.808690\n",
-       "Máximo Puntaje NEM                                    49.775965\n",
-       "Promedio Puntaje NEM                                  49.305241\n",
-       "Nombre del Campus                                     38.264613\n",
-       "Cód. Campus                                           38.262095\n",
-       "Matrícula primer año extranjeros                      31.090470\n",
-       "Matrícula total extranjeros                           25.774052\n",
-       "Puntaje de corte (promedio de la carrera)             15.903942\n",
-       "Puntaje de corte (primer seleccionado)                15.659769\n",
-       "Valor del Título                                      13.948044\n",
-       "Grado Académico                                       13.389216\n",
-       "Puntaje de corte (último seleccionado)                10.675628\n",
-       "Códgo SIES                                             5.865176\n",
-       "Título                                                 5.789659\n",
-       "Vacantes                                               3.408347\n",
-       "Mínimo Puntaje (promedio matemáticas y lenguaje)       1.137794\n",
-       "Valor de matrícula                                     1.092484\n",
-       "Matrícula primer año hombres                           0.999346\n",
-       "Nº Alumnos Ingreso Via PSU o PDT                       0.979208\n",
-       "Valor de arancel                                       0.533656\n",
-       "Matrícula total hombres                                0.483311\n",
-       "Matrícula primer año mujeres                           0.435483\n",
-       "Duración (en semestres)                                0.229069\n",
-       "Matrícula total mujeres                                0.100690\n",
-       "Máximo Puntaje (promedio matemáticas y lenguaje)       0.007552\n",
-       "Clasificación2                                         0.000000\n",
-       "Clasificación1                                         0.000000\n",
-       "Tipo Programa                                          0.000000\n",
-       "Tipo Moneda                                            0.000000\n",
-       "Clasificación4                                         0.000000\n",
-       "Tipo Institución                                       0.000000\n",
+       "Mínimo Puntaje Ranking                                89.665199\n",
+       "Máximo Puntaje Ranking                                89.658107\n",
+       "Promedio Puntaje Ranking                              89.580094\n",
+       "Mínimo Puntaje NEM                                    89.120200\n",
+       "Máximo Puntaje NEM                                    89.113108\n",
+       "Promedio Puntaje NEM                                  89.012182\n",
+       "Mención o Especialidad                                86.902015\n",
+       "Puntaje de corte (promedio de la carrera)             81.488574\n",
+       "Puntaje de corte (primer seleccionado)                81.435656\n",
+       "Puntaje de corte (último seleccionado)                80.325472\n",
+       "Mínimo Puntaje (promedio matemáticas y lenguaje)      78.413883\n",
+       "Promedio Puntaje (promedio matemáticas y lenguaje)    78.327687\n",
+       "Máximo Puntaje (promedio matemáticas y lenguaje)      78.168388\n",
+       "Nº Alumnos Ingreso Via PSU o PDT                      77.453724\n",
+       "Grado Académico                                       67.102011\n",
+       "Nº Alumnos Ingreso Otra Via                           61.868600\n",
+       "Nombre del Campus                                     57.032345\n",
+       "Cód. Campus                                           56.930328\n",
+       "Matrícula primer año extranjeros                      28.702203\n",
+       "Valor de arancel                                      25.370016\n",
+       "Matrícula total extranjeros                           24.681538\n",
+       "Vacantes                                              23.459518\n",
+       "Valor de matrícula                                    21.934720\n",
+       "Códgo SIES                                            21.805426\n",
+       "Valor del Título                                      15.108863\n",
+       "Matrícula primer año mujeres                           9.934371\n",
+       "Matrícula primer año hombres                           9.789802\n",
+       "Título                                                 2.038155\n",
+       "Matrícula total mujeres                                1.646454\n",
+       "Matrícula total hombres                                1.445148\n",
+       "Duración (en semestres)                                0.394974\n",
+       "Cód. Sede                                              0.000000\n",
+       "Matrícula Total                                        0.000000\n",
+       "Cód. Institución                                       0.000000\n",
        "Matrícula Primer Año                                   0.000000\n",
        "Nombre Institución                                     0.000000\n",
-       "Matrícula Total                                        0.000000\n",
+       "Tipo Institución                                       0.000000\n",
+       "Clasificación1                                         0.000000\n",
+       "Clasificación2                                         0.000000\n",
+       "Tipo Moneda                                            0.000000\n",
        "Clasificación3                                         0.000000\n",
-       "Clasificación6                                         0.000000\n",
+       "Clasificación4                                         0.000000\n",
        "Clasificación5                                         0.000000\n",
+       "Clasificación6                                         0.000000\n",
+       "Nombre de la Sede                                      0.000000\n",
+       "Comuna donde se imparte la carrera o programa          0.000000\n",
+       "Nombre Region                                          0.000000\n",
+       "Orden Geográfico de la Región (Norte aSur)             0.000000\n",
+       "Cód. Carrera                                           0.000000\n",
+       "Carrera Genérica                                       0.000000\n",
+       "Nombre Programa                                        0.000000\n",
+       "Horario                                                0.000000\n",
+       "Tipo Programa                                          0.000000\n",
        "Area Conocimiento                                      0.000000\n",
        "idgenerocarrera                                        0.000000\n",
        "Tipo Carrera                                           0.000000\n",
        "IngresoDirecto                                         0.000000\n",
        "Año Inicio Actividades                                 0.000000\n",
-       "Horario                                                0.000000\n",
-       "Nombre Programa                                        0.000000\n",
-       "Cód. Sede                                              0.000000\n",
-       "Cód. Institución                                       0.000000\n",
-       "Carrera Genérica                                       0.000000\n",
-       "Promedio Puntaje (promedio matemáticas y lenguaje)     0.000000\n",
-       "Cód. Carrera                                           0.000000\n",
-       "Orden Geográfico de la Región (Norte aSur)             0.000000\n",
-       "Nombre Region                                          0.000000\n",
-       "Comuna donde se imparte la carrera o programa          0.000000\n",
-       "Nombre de la Sede                                      0.000000\n",
        "Año                                                    0.000000\n",
+       "index                                                  0.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,6 +167,17 @@
    "source": [
     "nulls = df.isnull().sum() / len(df) * 100\n",
     "nulls.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df[\"Promedio Puntaje (promedio matemáticas y lenguaje)\"].notna()].reset_index(\n",
+    "    drop=True\n",
+    ")"
    ]
   },
   {
@@ -2658,13 +2620,6 @@
    "source": [
     "kmeans_df = compute_kmeans(df, range(2, 21))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2683,7 +2638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
