advanced pipes on hito3

--- a/hito3/exploracion.ipynb
+++ b/hito3/exploracion.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,13 @@
     "    df[df[\"Pregrado/Posgrado\"] == \"Pregrado\"]\n",
     "    .drop(columns=[\"Pregrado/Posgrado\"])\n",
     "    .reset_index(drop=True)\n",
+    "    .rename(columns={\"Año\": \"Fecha\"})\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
       "Data columns (total 59 columns):\n",
       " #   Column                                              Non-Null Count  Dtype         \n",
       "---  ------                                              --------------  -----         \n",
-      " 0   Año                                                 39726 non-null  datetime64[ns]\n",
+      " 0   Fecha                                               39726 non-null  datetime64[ns]\n",
       " 1   Cód. Institución                                    39726 non-null  int64         \n",
       " 2   Nombre Institución                                  39726 non-null  object        \n",
       " 3   Tipo Institución                                    39726 non-null  object        \n",
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +205,11 @@
        "Nombre Region                                          0.000000\n",
        "Comuna donde se imparte la carrera o programa          0.000000\n",
        "Nombre de la Sede                                      0.000000\n",
-       "Año                                                    0.000000\n",
+       "Fecha                                                  0.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
        "                ('ordinal_encoder', OrdinalColumnMapper())])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +321,7 @@
        "['/home/pabloskewes/FCFM/Minería de Datos/proyecto-mineria-de-datos/data/processed_df.pkl']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
