--- a/hito3/informe.ipynb
+++ b/hito3/informe.ipynb
@@ -89,9 +89,9 @@
     "A continuación se observa la distribución de los puntajes, donde se puede apreciar que en el caso de la PSU la mayoría de los estudiantes obtienen puntajes entre 400 y 700 puntos en ambas pruebas (esto ya que la escala de cada una de las pruebas de la PSU estaba estandarizado, con una media de 500 puntos y una desviación estándar de 110).\n",
     "\n",
     "\n",
-    "![Distribución de puntajes PSU](./outputs/psu.png)\n",
+    "![Distribución de puntajes PSU](./outputs/psu.jpeg)\n",
     "\n",
-    "![Distribución de puntajes PSU](./outputs/paes.png)"
+    "![Distribución de puntajes PSU](./outputs/paes.jpeg)"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desde un punto de vista más detallado, se analizarán las columnas de la base de datos para determinar cuáles son las más relevantes para el análisis y cuáles podrían ser descartadas.\n",
+    "Desde un punto de vista más detallado, se analizarán las columnas de la base de datos para determinar cuáles son las más relevantes para el análisis y cuáles podrían ser descartadas. Entre las columnas más importantes se encuentran las siguientes:\n",
     "\n",
     "* Año: Se observa que la base de datos cuenta con registros desde el año 2005 hasta el año 2023. Este atributo es numérico y el tipo de dato de esta columna es de tipo entero.\n",
     "* Cód. Institución: Corresponde al código que identifica a la institución de educación superior, por lo que es un atributo numérico. El tipo de dato de esta columna es de tipo entero, no requiriendo ningún tipo de transformación. Podría ser útil para realizar agregación de datos.\n",
@@ -141,7 +141,6 @@
     "* Puntaje de corte, (primer y último seleccionado y promedio de la carrera): Atributos cuantitativos que corresponden al puntaje de corte de la carrera o programa, así como el primer y último seleccionado y el promedio de estos. El tipo de dato de estas columnas es de tipo entero.\n",
     "* Máximo Puntaje, Promedio Puntaje y Mínimo Puntaje (NEM): Atributos cuantitativos que corresponden al puntaje máximo y mínimo de notas de enseñanza media de los seleccionados, así como el promedio de estos. El tipo de dato de estas columnas es de tipo entero.\n",
     "* Máximo Puntaje, Promedio Puntaje y Mínimo Puntaje (Ranking): Similar al caso anterior, pero para el ranking de notas de enseñanza media. El tipo de dato de estas columnas es de tipo entero.\n",
-    "* N° Alumnos \n",
     "\n",
     "A partir de esto, se observa que hay columnas que no nos entregan información relevante, como el orden geografico de la región, el Código SIES o el idgenerocarrera. \n",
     "\n",
@@ -203,32 +202,87 @@
     "### Predicción de puntaje de corte\n",
     "\n",
     "### Clustering de carreras e instituciones\n",
-    "Como se mencionó anteriormente, el conjunto de datos inicial no parece ser suficiente para responder las preguntas de agrupamiento. Por lo tanto, se decide utilizar una base de datos con información de los inmuebles de las instituciones de educación superior y que contiene varios identificadores en común con nuestro conjunto inicial, facilitando la unión de registros entre ambos.\n",
+    "Como se mencionó anteriormente, el conjunto de datos inicial no parece ser suficiente para responder las preguntas de agrupamiento. Por lo tanto, se decide utilizar una base de datos con información de los inmuebles de las instituciones de educación superior y que contiene varios identificadores en común con el conjunto inicial, facilitando la unión de registros entre ambos.\n",
     "\n",
     "Esta nueva base de datos posee diferentes pestañas, de las cuales se utilizarán las siguientes:\n",
     "* Inmuebles: Contiene información sobre los inmuebles de las instituciones de educación superior, como la superficie construida, número de salas, etc. \n",
     "* Laboratorios y Talleres: Contiene información sobre la cantidad de laboratorios y talleres que posee cada institución de educación superior, incluyendo el número de computadores.\n",
     "* Docentes: Esta pestaña contiene información sobre la cantidad de docentes que trabajan en cada institución de educación superior y el número de horas que trabajan, detallando también el número de docentes que trabajan en magíster y doctorado.\n",
     "\n",
-    "Con el fin de realizar los pasos propuestos en la metodología experimental, se procede a la creación de un pipeline de preprocesamiento. Esto, además de permitirnos ajustar los hiperparámetros de los algoritmos de preprocesamiento, nos permite evitar el data leakage al momento de realizar la validación cruzada.\n",
+    "Con el fin de realizar los pasos propuestos en la metodología experimental, se procede a la creación de un pipeline de preprocesamiento. Esto, además de permitir ajustar los hiperparámetros de los algoritmos de preprocesamiento, evita el data leakage al momento de realizar la validación cruzada. \n",
     "\n",
-    "Partiendo por el conjunto inicial y recordando el desbalance de la base de datos, se decide utilizar solo las carreras de Pregrado (83.8% de los datos). Con esto, algunas columnas del conjunto de datos \"Docentes\" no son relevantes, como el \"N°MagísterJornadaHora\" (que además tiene una tasa de nulos del 33%) o \"N°DoctorJornadaHora\" (con una tasa de nulos del 61%) por lo que se decide eliminarlas.\n",
+    "![Ejemplo de pipeline](./outputs/pipeline_inicial.png)\n",
     "\n",
-    "Luego, se decide eliminar las columnas que no aportan información relevante para el análisis, como el orden geográfico de la región, el idgenerocarrera y el Código SIES. En cuanto a los conjuntos de datos \"inmuebles\", \"labs\" y \"docentes\", se eliminaron las columnas ...\n",
+    "Es importante mencionar que cada etapa del pipeline se realiza en cada uno de los grupos de datos por separado. Aunque pareciera más sencillo realizar la unión de los datos antes de realizar el preprocesamiento, el realizarlo de esta forma otorga más control en el proceso, pudiendo realizar experimentos con distintas combinaciones según el dataframe elegido. Además, para combatir la falta de eficiencia, se realiza el preprocesamiento de cada grupo de datos en paralelo usando el pipeline llamado MultiDataFramePipeline.\n",
     "\n",
-    "Tras esto, se procede a obtener las columnas que cuentan con una alta tasa de nulos con la finalidad de eliminarlas. Se experimentó con umbrales de 0.5, 0.6 y 0.7, obteniendo los siguientes resultados:\n",
+    "![Procesamiento realizado a la columna \"Grado Académico\" que finalmente fue botada](./outputs/procesamiento_grado.jpeg)\n",
     "\n",
-    "...\n",
+    "#### Pipeline del conjunto inicial\n",
+    "Partiendo por el conjunto inicial y recordando el desbalance de la base de datos, se decide utilizar solo las carreras de Pregrado (83.8% de los datos). También se botan las filas que no cuentan con información de su puntaje promedio en las pruebas de matemáticas y lenguaje, ya que esta columna viene a reemplazar a las columnas de puntajes máximos y mínimos que cuentan con una alta tasa de nulos. Estas dos acciones son realizadas fuera del pipeline.\n",
     "\n",
-    "El siguiente paso realizado es el de imputar los nulos de las columnas restantes. Por el lado de los algoritmos de imputación univariante se encuentran el algoritmo SimpleImputer (que utiliza la media, mediana o moda para rellenar los nulos), mientras que por el lado de los multivariantes se está el algoritmo IterativeImputer (que utiliza un modelo de regresión para predecir los valores nulos). Adicionalmente, se cuenta con el algoritmo KNNImputer, que utiliza los k vecinos más cercanos para predecir los valores nulos. \n",
+    "El primer paso del pipeline de preprocesamiento del set inicial corresponde a la elimininación de columnas irrelevantes. Para esto, se eliminan las columnas que no aportan información relevante para el análisis, como el nombre de la sede del registro (existe Nombre del Campus que tiene una mejor tasa), el orden geográfico de la región, la mención o especialidad de la carrera, el idgenerocarrera, Código SIES y los puntajes que son innecesarias al usar la columna con su promedio. También se eliminan ciertas columnas para evitar la maldición de la dimensionalidad, como el grado académico (columna que fue procesada pero que se optó por no continuar para ser reemplazada por la columna \"Tipo Carrera\" que no contiene datos nulos), el código de la institución (debido a la existencia de la columna \"Nombre Institución\" que es más fácil de leer), el nombre de la región en que se imparte la carrera, la carrera genérica y el código de la carrera (debido a la existencia de la columna \"Area de Conocimiento\" que tiene una menor dimensionalidad), el nombre del programa, nombre del campus y título que otorga la carrera. El número de columnas pasa de 59 a 40 columnas.\n",
     "\n",
-    "Aunque dentro de la metodología propuesta la etapa de imputación ocurre antes del mapeo y la aplicación de OneHotEncoder, se decidió realizarlo después de estos pasos para evitar que los valores nulos se mapearan a una categoría o se crearan columnas de nulos en el caso de OneHotEncoder. Los resultados obtenidos son los siguientes:\n",
+    "![Detalle de un pipeline. Se observan las columnas a botar en el primer paso del pipeline](./outputs/pipeline_detalle.png)\n",
     "\n",
-    "<!-- A diferencia de los algoritmos mencionados previamente, este algoritmo requiere mapear las columnas cualitativas nominales a valores numéricos, por lo que se debieron realizar los dos pasos siguientes acordados en la propuesta . -->\n",
+    "Tras esto, se procede a obtener las columnas que cuentan con una alta tasa de nulos con la finalidad de eliminarlas. Se experimentó con un umbral de 0.24 y se decidió mantener la columna \"Nombre del Campus\" debido a que se considera como una columna importante para el análisis. Como resultado, se pasa de 40 a 34 columnas.\n",
     "\n",
-    "...\n",
+    "Una etapa adicional que se realiza es el de procesar el costo de la carrera/programa. Se estandariza la columna \"Tipo Moneda\" para obtener dos posibles valores: \"Pesos\" y \"UF\". Luego, para los registros cuyo valor de matrícula, arancel o título esta en UF, se multiplica por el valor de la UF del año actual. Finalmente, se elimina la columna \"Tipo Moneda\".\n",
     "\n",
-    "Como último paso del preprocesamiento, se realiza la unión de los cuatro conjuntos de datos. Para esto, se realiza un join entre el conjunto de datos inicial y los conjuntos de datos \"inmuebles\", \"labs\" y \"docencia\" utilizando el código de la institución y el código de la carrera. Luego, se realiza un join entre el conjunto de datos \"docentes\" y el conjunto de datos resultante del join anterior utilizando el código de la institución. Finalmente, se realiza un join entre el conjunto de datos resultante del join anterior y el conjunto de datos \"inicial\" utilizando el código de la carrera.\n"
+    "En el cuarto paso del pipeline se realiza el mapping de las columnas cualitativas ordinales (paso requerido por el modelo). El algoritmo mapea las categorías de una columna a valores numéricos, donde cada categoría es mapeada a un número entero. Por ejemplo, si una columna tiene las categorías \"A\", \"B\" y \"C\", estas serán mapeadas a 0, 1 y 2 respectivamente. Las columnas mapeadas son las Categorias del 1 al 6, Tipo Institución, Tipo Programa, Tipo Carrera, y Tipo Ingreso.\n",
+    "\n",
+    "Ante la presencia de columnas cualitativas nominales, se decide utilizar el algoritmo OneHotEncoder para realizar el mapeo. Este algoritmo crea una columna por cada categoría de la columna original, donde cada columna creada corresponde a un valor binario que indica si la categoría está presente o no. Por ejemplo, si una columna tiene las categorías \"A\", \"B\" y \"C\", estas serán mapeadas a 3 columnas: \"A\", \"B\" y \"C\", donde cada columna tendrá un valor de 1 si la categoría está presente en el registro o 0 si no lo está. Las columnas mapeadas son las columnas \"Nombre Institución\", \"Comuna donde se imparte la carrera o programa\", \"Area Conocimiento\" y \"Horario\".\n",
+    "\n",
+    "El último paso de este pipeline es el de imputar los nulos de las columnas restantes. Por el lado de los algoritmos de imputación univariante se encuentran el algoritmo SimpleImputer (que utiliza la media, mediana o moda para rellenar los nulos), mientras que por el lado de los multivariantes se está el algoritmo IterativeImputer (que utiliza un modelo de regresión para predecir los valores nulos). Adicionalmente, se cuenta con el algoritmo KNNImputer, que utiliza los k vecinos más cercanos para predecir los valores nulos. Debido a la falta de tiempo solo se experimenta con el algoritmo KNNImputer, elegido ya que considera la estructura local de los datos al imputar valores, lo que puede ser beneficioso en conjuntos de datos donde los vecinos cercanos son indicativos de relaciones relevantes. Se experimenta con distintos valores de k y se decide utilizar k=5, valor que computacionalmente no resulta demasiado costoso en este conjunto con gran cantidad de datos.\n",
+    "\n",
+    "#### Pipeline del nuevo conjunto de datos\n",
+    "Pasando al pipeline de los conjuntos de datos \"inmuebles\", \"labs\" y \"docencia\", se realiza un preprocesamiento mucho más simple. En primer lugar, se eliminan las columnas que aparecen en el conjunto inicial puesto que no aportan más información (mantener estos datos generaría columnas duplicadas al momento de unir los datasets). Luego, se botan las columnas con alta tasa de nulos, usando un umbral de 0.3 y finalmente se imputan los nulos utilizando el algoritmo KNNImputer con k=5.\n",
+    "\n",
+    "#### Pipeline de unión de los conjuntos de datos y ejecución de los algoritmos de clustering\n",
+    "\n",
+    "Ejecutado cada pipeline en paralelo, se realiza la unión de los cuatro conjuntos de datos resultantes. Para esto, se realiza un join utilizando el código de la sede (identificador más particular encontrado) y el año del registro. Para evitar la reaparición de valores nulos, se une la intersección de los conjuntos de datos, reduciendo solo en un 15% la cantidad de registros del dataset. La ejecución de los pipeline en paralelo y la unión del resultado de estos se realiza en un nuevo pipeline.\n",
+    "\n",
+    "El siguiente paso en este nuevo pipeline bota la columna \"Cód. Sede\" utilizada para hacer la unión. Esto, ya que se trata de un identificador en formato string (malo para el modelo) que ya no tiene utilidad.\n",
+    "\n",
+    "Luego, como cuarto paso, se utiliza el algoritmo VarianceThreshold para eliminar las columnas con varianza menor a un umbral de 0.1. Esto, con el fin de eliminar columnas que no aportan información relevante.\n",
+    "\n",
+    "Finalmente, antes de realizar los clusters, se estandarizan los datos utilizando el algoritmo StandardScaler. Esto, con el fin de evitar que los algoritmos de clustering sean sesgados por las diferencias de escala entre las columnas.\n",
+    "\n",
+    "#### Generación del cluster\n",
+    "Para la generación de los grupos de datos se utilizan el algoritmo K-means. Este algoritmo es uno de los más utilizados para realizar clustering, ya que es fácil de implementar y es computacionalmente eficiente. Además, es un algoritmo que permite determinar el número de clusters a priori, lo que es una ventaja al momento de realizar el análisis.\n",
+    "\n",
+    "Para determinar el número de clusters se utiliza el método del codo. Este método consiste en realizar el algoritmo de clustering para distintos valores de k y graficar el valor de la inercia (suma de las distancias al cuadrado de cada punto al centroide de su cluster) en función de k. El valor de k que se debe elegir corresponde al punto de la gráfica donde se observa un cambio de pendiente, lo que se conoce como el \"codo\" de la gráfica. En este caso, tras iterar el número de clusters desde 3 a 6, se observa que el codo se encuentra en k=4, por lo que se decide utilizar este valor para el algoritmo de clustering.\n",
+    "\n",
+    "![Gráfica de la inercia en función de k](./outputs/codo.png)\n",
+    "\n",
+    "#### Resultados\n",
+    "\n",
+    "Como vista general, se presenta la gráfica en 2D obtenida mediante PCA.\n",
+    "\n",
+    "![Gráfica de los clusters en 2D](./outputs/2d.png)\n",
+    "\n",
+    "Si bien en esta gráfica se observa que los clusters se encuentran bien definidos (lo que es un buen indicador de que el algoritmo de clustering funcionó correctamente) hay que tener en cuenta que esta gráfica solo muestra 2 dimensiones de los datos, por lo que a continuación se presentan histogramas en busca de caracterizar los clusters obtenidos.\n",
+    "\n",
+    "![Histograma de las instituciones por cluster](./outputs/nombre_institucion.jpeg)\n",
+    "\n",
+    "![Histograma de los tipo de institución (Clasificación1) por cluster](./outputs/clasificacion1.jpeg)\n",
+    "\n",
+    "![Histograma de los tipo de institución detallado(Clasificación2) por cluster](./outputs/clasificacion2.jpeg)\n",
+    "\n",
+    "![Histograma del tipo de acreditación (Clasificación3) por cluster](./outputs/clasificacion3.jpeg)\n",
+    "\n",
+    "![Histograma según adscripción a gratuidad (Clasificación5) por cluster](./outputs/clasificacion5.jpeg)\n",
+    "\n",
+    "![Histograma según área de la carrera por cluster](./outputs/area.jpeg)\n",
+    "\n",
+    "![Histograma según comuna en que se imparte la carrera por cluster](./outputs/comuna.jpeg)\n",
+    "\n",
+    "![Histograma según tipo de carrera por cluster](./outputs/tipo.jpeg)\n",
+    "\n",
+    "![Histograma según costo arancel por cluster](./outputs/valor_arancel.jpeg)\n",
+    "\n",
+    "![Histograma según puntaje promedio matemáticas y lenguaje por cluster](./outputs/promedio_puntaje.jpeg)\n",
+    "\n",
+    "\n"
    ]
   },
   {
